# FastenHomeAut

./: .cproject  .gitignore  .gitlab-ci.yml  .mxproject  .project  CMakeLists.txt  CmakeLists.txt  Debug_STM32F030C8_FLASH.ld  Debug_STM32F401RE_FLASH.ld  Debug_STM32F407VG_FLASH.ld  Doxyfile  FastenHomeAutF0.elf.launch  FastenHomeAutF0.ioc  FastenNodeF0.elf.launch  README.c  README.md  RunAll.bat  RunAnalysis_Clang.bat  RunCMake.bat  RunCMake_ArmCC.bat  RunCMake_Clang.bat  RunCMake_Clang.sh  RunCMake_Cygwin - WRONG.bat  RunCMake_GccCoverage.bat  RunCMake_GccCoverage.sh  RunCMake_MinGW_GCC.bat  RunCMake_Mingw32_atollicPC.bat  RunCMake_Mingw64.bat  RunCMake_Mingw64_Local.bat  RunCMake_Mingw64_OnLinux.sh  RunCMake_Mingw64_PipelineTest.bat  RunCMake_TCC.bat  RunCMake_TCC.sh  RunCMake_gcc-arm-atollic-eabi.bat  RunCMake_gcc-arm-none-eabi.bat  RunCMake_gcc-arm-none-eabi.sh  RunCMake_gcc-arm-none-eabi_STM32F4.bat  RunClang.bat  RunClangWithCMake.bat  RunCmake_Clang.sh  (+42 more)
.scannerwork/: report-task.txt
Debug/: STM32F407DiscoHomeAut.elf.list  STM32F407DiscoHomeAut.map
Docs/: CodingStyle.c  DevelopmentGuide.md  GlobalVarHandlerBlockDiagram.odg  Template_ALL.xml  template_c_header.xml  template_comment_file.xml
Docs/BlockDiagrams/: GlobalVarHandlerBlockDiagram.odg
Docs/Configs/: Atollic_Cpp_Formatter_FastenProfile-FromBSD-Allman.xml  CMake configs.txt  ClangCMake configs.txt  Configs.txt  Cppcheck configs.txt  SoftwareInstalls.md
Docs/Examples/: fbuild_example.bff
Docs/Hooks/: commit-msg
Docs/Templates/: template_ALL.xml  template_c_header.xml  template_c_source.xml  template_comment_file.xml  template_comment_method.xml
Inc/: BoardInfos.h  CommandHandler.h  DateTime.h  DebugList.h  ESP8266.h  ErrorHandler.h  EventList.h  EventNames.h  Flash_S25FL.h  FreeRTOSConfig.h  GenericTypeDefs.h  GlobVarList.h  GlobalVarHandler.h  GlobalVariables.h  Globals.h  IO.h  Logic.h  MEM.h  RTC.h  SysManager.h  TaskList.h  Terminal.h  adc.h  board.h  button.h  calc.h  command.h  commandList.h  commonAdc.h  commonDac.h  commonIO.h  communication.h  compiler.h  dac.h  escapesequence.h  flash.h  formattedMessage.h  homeautmessage.h  include.h  led.h  (+15 more)
Inc/Application/: ButtonSimulator.h  Logic.h  RemoteController.h  SmallApps.h  Snake.h
Inc/Common/: CircularBuffer.h  CommandHandler.h  ConvertTable.h  DateTime.h  Debug.h  EventHandler.h  EventLog.h  GenericTypeDefs.h  GlobalVarHandler.h  HomeAutMessage.h  LinkedList.h  MEM.h  MemHandler.h  SecuredDataTypes.h  StringHelper.h  TaskHandler.h  calc.h  network.h  string.h  unittest.h
Inc/Communication/: ColoredMessage.h  Communication.h  DebugUart.h  EscapeSequence.h  SWO.h  Terminal.h  UART.h  WebpageHandler.h  communication.h  escapesequence.h  formattedMessage.h  swo.h  usart.h
Inc/Display/: Display.h  DisplayHandler.h  DisplayImages.h  Display_SSD1306.h  Font12x8.h  Font32x20.h  Font8x5.h
Inc/Game/: Snake.h
Inc/HwTester/: CommonADC.h  CommonDAC.h  CommonIO.h  CommonPWM.h  CommonSPI.h  CommonUART.h  commonAdc.h  commonDac.h  commonIO.h  commonPWM.h
Inc/List/: AppList.h  CommandList.h  DebugList.h  EventList.h  GlobVarList.h  IOList.h  LedList.h  TaskList.h  UnitTestList.h  WebpageList.h
Inc/Modules/: ADC.h  Bluetooth_HC05.h  Button.h  Display.h  DisplayImages.h  Display_SSD1306.h  EEPROM.h  ESP8266.h  Font12x8.h  Font32x20.h  Font8x5.h  GSM_SIM800.h  GpsHandler.h  HardFaultHandler.h  IO.h  LED.h  LedPWM.h  MeasurementTimer.h  Motor.h  RTC.h  Reset.h  ResetHandler.h  SysTime.h  Watchdog.h  button.h  led.h  motor.h  raspberrypi.h
Inc/Old/: Flash_S25FL.h  IO.h  SysManager.h  adc.h  temperature.h
Inc/SelfTest/: SelfTest_Errors.h  SelfTest_Flag.h  SelfTest_Ram.h
Middlewares/STM32_SelfTest_Library/: Release_Notes.html  stm32f4xx_STLcpurunIARv5.S  stm32f4xx_STLcpurunKEIL.s  stm32f4xx_STLcpustartIARv5.S  stm32f4xx_STLcpustartKEIL.s  stm32fxx_STLRamMcMxGNUC.s  stm32fxx_STLRamMcMxIAR.S  stm32fxx_STLRamMcMxKEIL.s
Old/: Flash_S25FL.c  SysManager.c  SysManager.h  temperature.h  template.h
Src/: BoardInfos.c  CommandHandler.c  DateTime.c  DebugList.c  ESP8266.c  ErrorHandler.c  EventHandler.c  EventList.c  Flash_S25FL.c  GlobVarList.c  GlobalVarHandler.c  GlobalVariables.c  Globals.c  IO.c  Logic.c  MEM.c  RTC.c  SysManager.c  TaskList.c  Terminal.c  adc.c  button.c  calc.c  command.c  commandList.c  commonAdc.c  commonDac.c  commonIO.c  communication.c  dac.c  flash.c  formattedMessage.c  homeautmessage.c  it.c  led.c  main.c  monitor.c  network.c  raspberrypi.c  stm32f0xx_hal_msp.c  (+14 more)
Src/Application/: ButtonSimulator.c  Logic.c  RemoteController.c  SmallApps.c  Snake.c
Src/Common/: CircularBuffer.c  CommandHandler.c  ConvertTable.c  DateTime.c  Debug.c  EventHandler.c  EventLog.c  GlobalVarHandler.c  HomeAutMessage.c  LinkedList.c  MEM.c  MemHandler.c  NetworkHelper.c  SecuredDataTypes.c  TaskHandler.c  calc.c  network.c  string.c  unittest.c
Src/Communication/: ColoredMessage.c  Communication.c  DebugUart.c  SWO.c  Terminal.c  UART.c  WebpageHandler.c  communication.c  formattedMessage.c  swo.c  usart.c
Src/Display/: Display.c  DisplayHandler.c  DisplayImages.c  Display_SSD1306.c  Font12x8.c  Font32x20.c  Font8x5.c
Src/Game/: Snake.c
Src/HwTester/: CommonADC.c  CommonDAC.c  CommonIO.c  CommonPWM.c  CommonSPI.c  CommonUART.c  commonAdc.c  commonDac.c  commonIO.c  commonPWM.c
Src/List/: AppList.c  CommandList.c  DebugList.c  EventList.c  GlobVarList.c  IOList.c  LedList.c  TaskList.c  UnitTestList.c  WebpageList.c
Src/Modules/: ADC.c  Bluetooth_HC05.c  Button.c  Display.c  DisplayImages.c  Display_SSD1306.c  EEPROM.c  ESP8266.c  Font12x8.c  Font32x20.c  Font8x5.c  GSM_SIM800.c  GpsHandler.c  HardFaultHandler.c  IO.c  LED.c  LedPWM.c  MeasurementTimer.c  Motor.c  RTC.c  Reset.c  ResetHandler.c  SysTime.c  Watchdog.c  button.c  led.c  motor.c  raspberrypi.c
Src/Old/: Flash_S25FL.c  IO.c  SysManager.c  adc.c  temperature.c  template.c
Src/SelfTest/: SelfTest_Errors.c  SelfTest_Flag.c  SelfTest_Ram.c
Tools/FBuild/: README.txt
Utils/PythonBmpFontConvert/: Font12x8.c  Font32x20.c  Font8x5.c  PythonBmpFontConvert.py  (+1 more)
(+130 files in other folders)
